# psps

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
src/cpp/: Makefile  similarity.cpp
src/psps/: sario.py  scr.py  similarity.py
tests/: data_format.ipynb  test.py  tutorial.ipynb
tests/data/amplitude/: 20170201.amp  20170213.amp  20170225.amp  20170309.amp  20170321.amp  20170402.amp  20170414.amp  20170426.amp  20170508.amp  20170520.amp  20170601.amp  20170613.amp  20170625.amp  20170707.amp  20170719.amp  20170731.amp  20170812.amp  20170824.amp  20170905.amp  20170917.amp  20170929.amp  20171011.amp  20171023.amp  20171104.amp  20171116.amp  20171128.amp  20171210.amp  20171222.amp  20180103.amp  20180115.amp  20180127.amp  20180208.amp  20180220.amp  20180304.amp  20180316.amp  20180328.amp  20180409.amp  20180421.amp  20180503.amp  20180515.amp  (+53 more)
tests/data/correlation/: avg_correlation
tests/data/igrams/: 20170201_20180115.int  20170213_20180115.int  20170225_20180115.int  20170309_20180115.int  20170321_20180115.int  20170402_20180115.int  20170414_20180115.int  20170426_20180115.int  20170508_20180115.int  20170520_20180115.int  20170601_20180115.int  20170613_20180115.int  20170625_20180115.int  20170707_20180115.int  20170719_20180115.int  20170731_20180115.int  20170812_20180115.int  20170824_20180115.int  20170905_20180115.int  20170917_20180115.int  20170929_20180115.int  20171011_20180115.int  20171023_20180115.int  20171104_20180115.int  20171116_20180115.int  (+67 more)
tests/ps_data/: amp_disp  max_sim  scr
