[metadata]
name = psps
version = 0.0.1
author = Ke Wang
author_email = kewang@utexas.edu
description = 'Persistent Scatterer selection based on phase similarity'
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/UT-Radar-Interferometry-Group/psps
project_urls =
    Bug Tracker = https://github.com/UT-Radar-Interferometry-Group/psps/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
